<resources>
    <string name="app_name">Thoughts On Me</string>
    <string name="skip">Skip</string>
    <string name="find_people_intro_title">Find anyone\'s reviews</string>
    <string name="find_people_intro_text">Find what people say about someone you are curious about.</string>
    <string name="review_people_intro_text">Add a new review of someone you know</string>
    <string name="write_people_intro_title">Create New Reviews</string>
    <string name="texting_intro_title">In App texting</string>
    <string name="texting_intro_text">More fun with anonymous texting</string>
    <string name="secure_intro_title">Everything Anonymous</string>
    <string name="secure_intro_text">Those you interact with will never know your identity</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="get_started">Get started</string>
    <string name="welcome_text">Welcome to ToM</string>
    <string name="create_acc_text">Continue with your google account to get started.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="i_agree_with_the">I agree with the</string>
    <string name="and">and</string>
    <string name="input_phone_number">Input Phone Number</string>
    <string name="finish">Finish</string>
    <string name="later">Later</string>
    <string name="okay">Okay</string>
    <string name="phone_exp">1. To avoid random strangers reviewing you, we use your phone number as a private key so that only those who know it can write you reviews. It is <u><b>NOT</b> </u>exposed to or shared with anyone.</string>
    <string name="phone_exp2">2. If you Do not provide your phone, <b>Anyone</b> who knows your name will be able to write you reviews.</string>
    <string name="provide_your_key">Provide your key?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search anyone\'s name or nickname</string>
    <string name="no_reviews_title">You have no reviews yet</string>
    <string name="fetching_your_reviews">Fetching your reviews</string>
    <string name="reviews_found">" reviews found matching you"</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="inbox">Inbox</string>
    <string name="lock_chat_but_but_stay_here">Lock chat but but stay here</string>
    <string name="lock_conversation">Lock Conversation</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="hide_conversation">Hide Conversation</string>
    <string name="lock_and_move_to_hidden_chats">Lock and move to hidden chats</string>
    <string name="messeges">Messeges</string>
    <string name="text_type_hint">Write something</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="add_a_review">Add A Review</string>
    <string name="target_name">Target name</string>
    <string name="target_nicknames">Target nicknames</string>
    <string name="target_phones">Input Phone numbers</string>
    <string name="add_target_photo">Add target Photo</string>
    <string name="an_image_helps_visually_identify_the_target">An image helps visualy identify the target</string>
    <string name="step_1_identification_details">STEP 1 : Identification details</string>
    <string name="next">Next</string>
    <string name="txt_number_confirmation">NOTE: Please confirm the phone numbers as their exact match of each will be used to link the target\'s reviews. <b>Country code Inclusive.</b></string>
    <string name="step2_title">Step 2 : Check if <u><b>%s</b></u> exists in the database</string>
    <string name="text_user_found">User Found!!</string>
    <string name="text_user_not_found">User not found</string>
    <string name="user_s_profile_picture_and_details_will_be_saved_as_default_for_this_review">User\'s profile picture and details will be saved as default for this review.</string>
    <string name="error_fetching_user">Error getting user data</string>
    <string name="review_topic_hint">Review topic or theme</string>
    <string name="topic_hint">What is the main topic or theme of your review? \n eg. <b>Eating habits, Bed performance, Cooking skills</b></string>
    <string name="review_text_hint">Review goes here</string>
    <string name="final_step">Final Step</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,  pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.  Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,  in pretium orci vestibulum eget. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis pharetra luctus lacus ut  vestibulum. Maecenas ipsum lacus, lacinia quis posuere ut, pulvinar vitae dolor. Integer eu nibh at nisi ullamcorper sagittis id vel leo. Integer feugiat  faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.  Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis.  Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus,  non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos  sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam recusandae alias error harum maxime adipisci amet laborum. Perspiciatis  minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit  quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur  fugiat, temporibus enim commodi iusto libero magni deleniti quod quam  consequuntur! Commodi minima excepturi repudiandae velit hic maxime doloremque. Quaerat provident commodi consectetur veniam similique ad  earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo  fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore  suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam  totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam  quasi aliquam eligendi, placeat qui corporis!</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Your password</string>
    <string name="forgot_psd">Forgot Password?</string>
    <string name="log_in_with">Or, login with...</string>
    <string name="register">Register</string>
    <string name="new_to_thoughts_on_me">New to Thoughts on Me?</string>
    <string name="authenticating">Authenticating...</string>
    <string name="input_error">field needed</string>
    <string name="sent">sent</string>
    <string name="delivered">delivered</string>
    <string name="read">read</string>
    <string name="reply">reply</string>
    <string name="copy">copy</string>
    <string name="remove">remove</string>
    <string name="edit_profile">Edit Profiles</string>
    <string name="content">content</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="following">Following</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="replying_to_yourself">Replying to yourself</string>
    <string name="replying_to">"Replying to "</string>
    <string name="replying_to_you">Replying to you</string>
    <string name="photo">Photo</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>
    <string name="review_reply_hint">Comment…</string>
    <string name="add_comment">Add</string>
    <string name="done">Done</string>
    <string name="username_in_edt">Username</string>
    <string name="gender">Gender</string>
    <string name="upload_image">Upload Image</string>
    <string name="account_settings">Account Settings</string>
    <string name="ui_mode">light</string>
    <string name="app_name_in_dash">Thoughts On Me</string>
    <string name="positivity_rate">positivity rate</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_login">Back to login</string>
    <string name="password_matching_error">passwords do not match</string>
    <string name="password_length_error">too short</string>
    <string name="photo_error">Please upload photo</string>
    <string name="creating_account_dialog_title">Creating account</string>
    <string name="account_dialog_content">creating your account</string>
    <string name="setting_up_photo">Setting up your profile picture</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="forgot_password">Forgot\nPassword?</string>
    <string name="forgot_password_description">Don\'t worry, it happens. Please enter the email address associated with your account</string>
    <string name="send_link">Send Link</string>
    <string name="send_link_dialog_title">Sedning link</string>
    <string name="send_link_dialog_text">Sending password reset link to provided email address.</string>
    <string name="send_link_success_title">Link Sent</string>
    <string name="send_link_success_text">Check your emaill to reset your password and log in with your new password</string>
    <string name="fetching_name">fetching name...</string>
    <string name="fetching_tagline">fetching tagline...</string>
    <string name="fetching_link">fetching link...</string>
    <string name="no_tagline_set">Tap here to set a description or tagline</string>
    <string name="unable_to_copy_link">Link is empty</string>
    <string name="creating_link">Creating link</string>
    <string name="send_link_description">Anonymously write what you think about me</string>
    <string name="please_set_profile_image">Please set up your profile photo</string>
    <string name="failed_to_create_link">Failed to create link</string>
    <string name="tap_to_restart">Tap to restart</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="failed_to_upload_image">Failed to upload image</string>
    <string name="success">Success</string>
    <string name="loading">loading...</string>
    <string name="failed_try_again_later">Filed try again later</string>
    <string name="failed">Failed</string>
    <string name="please_upload_your_profile_picture_first">Please upload your profile picture first</string>
    <string name="link_copied">Link copied</string>
    <string name="searching">Searching...</string>
    <string name="search_not_found">Hmmn... We couldn\'t find this user.</string>
    <string name="invite_him"><u>Know em? Invite em</u> 😀</string>
    <string name="empty_inbox_message">There\'s nothing here. You can start a conversation from a person\'s profile, thoughts on em, or comments.</string>
    <string name="chats">Chats</string>
    <string name="error_publishing_thought">Error publishing</string>
    <string name="publishing">Publishing</string>
    <string name="try_again">Try again</string>
</resources>