<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_btn_close_sheet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical|end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_exit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="2dp"
        android:background="@color/default_text_color" />

    <TextView
        android:id="@+id/txt_delete_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="5dp"
        android:text="@string/delete_conversation"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout_hide_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/hide_conversation"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_and_move_to_hidden_chats"
            android:textColor="@color/default_text_color"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_lock_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/lock_conversation"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_chat_but_but_stay_here"
            android:textColor="@color/default_text_color"
            android:textSize="13sp" />


    </LinearLayout>


</LinearLayout>