<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reply_sent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:layout_gravity="end"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:paddingStart="100dp"
    android:paddingEnd="1dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/reply_view_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reply_msg_sent_bg"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_reply_to_replied"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/replying_to_yourself"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/txt_message_content_replied"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/lorem_ipsum" />


            </LinearLayout>

            <ImageView
                android:id="@+id/reply_image_replied"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:maxHeight="60dp"
                android:minHeight="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/test"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <ImageView
            android:id="@+id/reply_image_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/test"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_sent_message_to_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/sent_reply_bg"
            android:fontFamily="sans-serif"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_delivery_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/sent" />

    </LinearLayout>

</LinearLayout>