<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/reply_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/reply_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/reply"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/copy_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/copy_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/remove_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/delete_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>