<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".OtherActivities.IntroFragmentsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:layout_toEndOf="@+id/txt_app_name"
            android:gravity="end"
            android:text="@string/skip"
            android:textColor="@color/purple_700"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.gachugusville.thoughtsonme.OtherActivities.CustomViewPager
        android:id="@+id/intro_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_getStarted"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_getStarted"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_people_intro_text" />

</androidx.constraintlayout.widget.ConstraintLayout>